2011-09-22  Darin Adler  <darin@apple.com>

        Remove unneeded type conversion from background bleed code
        https://bugs.webkit.org/show_bug.cgi?id=68669

        Reviewed by Geoffrey Garen.

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::backgroundRectAdjustedForBleedAvoidance): Use ceil instead of ceilf
        and eliminate superflous conversion to float and use of FloatSize. Also added
        a "why" comment.

2011-09-22  Darin Adler  <darin@apple.com>

        Refactor checks for antialiasing lines to share a single function
        https://bugs.webkit.org/show_bug.cgi?id=68666

        Reviewed by Dan Bernstein.

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::paintColumnRules): Call shouldAntialiasLines.
        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::paintBorder): Ditto.
        (WebCore::RenderBoxModelObject::shouldAntialiasLines): Added.
        * rendering/RenderBoxModelObject.h: Added shouldAntialiasLines function.
        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::paintOutlineForLine): Call shouldAntialiasLines.
        * rendering/RenderTableCell.cpp:
        (WebCore::RenderTableCell::paintCollapsedBorder): Ditto.

2011-09-22  Antoine Labour  <piman@chromium.org>

        Remove unused members from LayerChromium.
        These members are never set, and never used.
        Other members that are set but not used have been left (we may use them
        later, e.g. m_opaque).
        https://bugs.webkit.org/show_bug.cgi?id=68297

        Reviewed by James Robinson.

        No functional change, no new test needed.

        * platform/graphics/chromium/LayerChromium.cpp:
        (WebCore::LayerChromium::LayerChromium):
        * platform/graphics/chromium/LayerChromium.h:

2011-09-22  Tom Sepez  <tsepez@chromium.org>

        Make XSSAuditor extract meaningful snippet from script blocks for comparison