@@ -1,5 +1,17 @@
 2011-09-22  Darin Adler  <darin@apple.com>
 
+        Use AffineTransform scale functions in ShadowBlur::adjustBlurRadius
+        https://bugs.webkit.org/show_bug.cgi?id=68667
+
+        Reviewed by Simon Fraser.
+
+        * platform/graphics/ShadowBlur.cpp:
+        (WebCore::ShadowBlur::adjustBlurRadius): Use AffineTransform::xScale and
+        AffineTransform::yScale instead of the custom code here that seems to do
+        the same thing.
+
+2011-09-22  Darin Adler  <darin@apple.com>
+
         Remove unneeded type conversion from background bleed code
         https://bugs.webkit.org/show_bug.cgi?id=68669
 
